optimize http status